--- a/resumes.qmd
+++ b/resumes.qmd
@@ -10,3 +10,8 @@ subtitle: "Sorted by creation date"
 ```{=html}
 <iframe src="https://drive.google.com/file/d/1Rki-0qytwnbDy3rZk7shYRK-2_7sm8Kw/preview" width="640" height="480" allow="autoplay"></iframe>
 ```
+### Resume \# 3:
+
+```{=html}
+<iframe src="https://drive.google.com/file/d/12p5DItosgHALez5W04ei4UDI4odYfUbW/preview" width="640" height="480" allow="autoplay"></iframe>
+```
