Remove sections from left-hand side
Explore and Setup, Transition from Rmd
Both sections were removed

--- a/aboutme.qmd
+++ b/aboutme.qmd
@@ -38,9 +38,9 @@ Cleveland State University \| Cleveland, OH
 
 ## Experience
 
-Wengo Analytics \| Head Data Scientist \| April 2018 - present
+Data Analyst \| Progressive Insurance \| July 2021 - Present
 
-GeoScynce \| Chief Analyst \| Sept 2012 - April 2018
+Graduate Assistant \| Cleveland State University \| Aug. 2019 - Dec. 2021
 :::
 
 ### Remarks
