--- a/aboutme.qmd
+++ b/aboutme.qmd
@@ -44,7 +44,7 @@ Data Analyst \| Progressive Insurance \| July 2021 - Present
 Graduate Assistant \| Cleveland State University \| Aug. 2019 - Dec. 2021
 :::
 
-### Tech Stack:
+### Tech Stack
 
 ::: {#fig-languages layout-ncol="3"}
 ![R](images/RStudio-Logo-Flat.png){width="100" height="50"}
@@ -67,3 +67,6 @@ In my free time, I work on projects like this website and - as of Oct. 3rd, 2022
 ```{=html}
 <iframe src="https://drive.google.com/file/d/1EH2i0cIKr_lwj8WsVP6J-B-8EJtK6s_w/preview" width="640" height="480" allow="autoplay"></iframe>"
 ```
+### Perception of Skills
+
+![As of November 2022, Made with ggplot2](assets/graphs/SkillsGraph.png){fig-align="center"}
