--- a/posts/xgboost/xgboost.qmd
+++ b/posts/xgboost/xgboost.qmd
@@ -34,7 +34,7 @@ Decision Trees are simple clustering algorithms that split the predictor space i
 
 Generally speaking, the algorithm works by searching through the available predictors and selecting the one that splits the leads to the greatest reduction in residual sums of squares (RSS), called recursive binary splitting.However, the model does not look beyond a single split to see if other predictors may lead to a greater overall reduction of RSS over the course of many splits.This is called a greedy algorithm. Considering the image below, we see that decision trees are a top-down approach, meaning that they start with the full predictor space then, moving down, create rules that split the space into distinct regions. The end result is a set divided predictor space of non-overlapping regions, as seen on the left. The splitting process continues until a criterion is met, whether it be a defined maximal depth, number of observations per leaf, or number of observations per split.
 
-![Bishop 2006 from 2 Charles U ML reference](https://lh3.googleusercontent.com/sZVKcX9-syR5Xk5Ca0qRwJXV567VHJtq1YCo9hPBCQ9TMspBA1XK34u3xdoTFf4cnB0UKGNQ2-L9isGwLCrOLUUE6JZWvwl9cSRhJUg1-gA3JFtGmbCJu1VwsBq1nnYhxNg8Q7Y)
+![Bishop 2006 from 2 Charles U ML reference](TreeBasedDesign.png)
 
 Tree pruning is a method that can improve the predictive accuracy of decision trees. Pruning refers to the reduction in depth of the tree. One concern about decision trees is over-fitting by modeling noise or being too complex. Utilizing a process known as cost complexity pruning, the optimal tree depth may be determined.This process considers the prediction error and the number of terminal nodes, as illustrated in the equation below.Cost complexity pruning aims to minimize this equation. The tuning parameter, $\alpha$, controls the complexity, or depth, of the tree. A large $\alpha$ will result in a deep, complex tree (less pruning) and a small will result in a shallow tree (more pruning). In general, shallow trees cannot model all of the patterns in the data and will have higher prediction error at the cost of low complexity.Deep trees can model the patterns in the data at the cost of high complexity and potential over-fitting.There exists a happy medium between the two.
 
@@ -152,7 +152,7 @@ Given forestry data from four wilderness areas in Roosevelt National Forest, cla
 The forest cover type problem requires a prediction of the type of trees that are growing on a plot of land from a variety of descriptive features that affect which species are able to grow in those conditions.An effective model would be able to accurately predict the cover type, allowing researchers to make these predictions without using remotely sensed data.There are 12 predictor variables that can be used to predict the cover type.Table 1 below summarizes each of these predictors. Each observation in the dataset consists of measurements from these variables from a 30 meter by 30 meter plot of land in northern Colorado.There are 581,012 observations in this dataset.The dataset was released in 1998.
 
 | Variable Name                      | Type         | Measurement Unit        | Description                                             |
-|------------------------------------|--------------|-------------------------|---------------------------------------------------------|
+|----------------|---------------|---------------|---------------------------|
 | Elevation                          | Quantitative | Meters                  | Elevation in Meters                                     |
 | Aspect                             | Quantitative | Azimuthal Angle         | Aspect in Degrees Azimuth                               |
 | Slope                              | Quantitative | Degrees                 | Slope in Degrees                                        |
