--- a/posts/clustering-indices-project/cluster-indices.qmd
+++ b/posts/clustering-indices-project/cluster-indices.qmd
@@ -188,7 +188,7 @@ $C_{k}$ = A submatrix of $X$ made up of the rows of $X$ where some partition, $P
 
 $n_{k}$ = the number of observations belonging to cluster $C_{k}$
 
-##  4.1 <a name="bhindex"></a>Ball-Hall Index
+## 4.1 <a name="bhindex"></a>Ball-Hall Index
 
 This index is based on the average distance of the items to their respective cluster centroids. It is just the within-group sum of distances and is computed as:
 
@@ -214,13 +214,13 @@ The C index was reviewed by [Hubert and Levin, 1976](#C_Index) and is calculated
 
 $$C_{index} = \frac {S_w - S_{min}}{S_{max} - S_{min}}, C_{index} \in (0, 1) \tag{5}$$
 
-where 
+where
 
-* $S_{min}$ = the sum of the $N_W$ smallest distances between all the pairs of points in the entire data set;
+-   $S_{min}$ = the sum of the $N_W$ smallest distances between all the pairs of points in the entire data set;
 
-* $S_{max}$ = the sum of the $N_W$ largest distances between all the pairs of points in the entire data set.
+-   $S_{max}$ = the sum of the $N_W$ largest distances between all the pairs of points in the entire data set.
 
-* $N_{W}$ = $\displaystyle \sum_{k=1}^{K} \frac {n_k(n_k - 1)}{2}$
+-   $N_{W}$ = $\displaystyle \sum_{k=1}^{K} \frac {n_k(n_k - 1)}{2}$
 
 The optimal number of clusters is indicated by the minimum value of the C index. Finally, the C-index has a time complexity of $O(m^{2}(n + log_2m))$, mostly due to the computational cost of sorting the $N_W$ pairwise distances, which can be slow with a large number of observations.
 
@@ -406,13 +406,13 @@ The computational run time of the Hartigan index is $O(n(k^{2} + m))$ and is dis
 
 ## 4.14 <a name="logssindex"></a>Log SS Ratio Index
 
-This index, from  [J. A. Hartigan. Clustering algorithms. New York: Wiley, 1975.](https://people.inf.elte.hu/fekete/algoritmusok_msc/klaszterezes/John%20A.%20Hartigan-Clustering%20Algorithms-John%20Wiley%20&%20Sons%20(1975).pdf) considers the within ($WGSS$)  and between ($BGSS$) cluster sums of squares. It should be noted that the log used is base $10$, not $e$.
+This index, from [J. A. Hartigan. Clustering algorithms. New York: Wiley, 1975.](https://people.inf.elte.hu/fekete/algoritmusok_msc/klaszterezes/John%20A.%20Hartigan-Clustering%20Algorithms-John%20Wiley%20&%20Sons%20(1975).pdf) considers the within ($WGSS$) and between ($BGSS$) cluster sums of squares. It should be noted that the log used is base $10$, not $e$.
 
 The time complexity of this index is, at worst, $O(n(k^{2} + m))$ and at best $O(nm)$ when $k^{2} << m$. Thus, this index is ideal for data with naturally large clusters.
 
 ## 4.15 Marriot Index
 
-The Marriot Index [Marriot, 1971](#Marriot) is based on the determinant of the within-group covariance matrix. 
+The Marriot Index [Marriot, 1971](#Marriot) is based on the determinant of the within-group covariance matrix.
 
 Mathematically, it is computed as:
 
@@ -448,7 +448,7 @@ $$\bar{S_b} = S_b / N_b \tag{37}$$
 
 and,
 
-$$s_d \tag{38}$$ 
+$$s_d \tag{38}$$
 
 is the standard deviation over all of the distances
 
@@ -478,7 +478,7 @@ $$Pseudo-t^{2} \le (\displaystyle \frac {1 - CritValue}{CritValue}) \times (n_k 
 
 ## 4.19 Ratkowsky-Lance Index
 
-The [Ratkowsky and Lance, 1978](#RLIndex) index is based on the average of the ratio between the between-group sum of squares and the total sum of squares for each variable. 
+The [Ratkowsky and Lance, 1978](#RLIndex) index is based on the average of the ratio between the between-group sum of squares and the total sum of squares for each variable.
 
 Mathematically, it is computed as:
 
@@ -500,7 +500,7 @@ The optimal number of clusters is suggested by the maximum value of the index. F
 
 ## 4.20 Ray-Turi Index
 
-This index, proposed by [Ray and Turi in 1999](#Ray-Turi), came off of the heels of image segmentation, which separates parts of images into differing components. The index is simply the ratio between the intra-cluster distance and the inter-cluster distance. 
+This index, proposed by [Ray and Turi in 1999](#Ray-Turi), came off of the heels of image segmentation, which separates parts of images into differing components. The index is simply the ratio between the intra-cluster distance and the inter-cluster distance.
 
 Mathematically, it can be written as:
 
@@ -538,7 +538,7 @@ is the total sum of squares and cross-products matrix of shape $(p \times p)$.
 
 ## 4.22 Rubin Index
 
-The Rubin Index, proposed by [Friedman and Rubin in 1967](#Rubin), is based on the ratio of the determinants of the data covariance matrix and within-group covariance matrix. 
+The Rubin Index, proposed by [Friedman and Rubin in 1967](#Rubin), is based on the ratio of the determinants of the data covariance matrix and within-group covariance matrix.
 
 Mathematically, it can be formed like so:
 
@@ -566,7 +566,7 @@ The optimal suggested number of clusters is given by the maximum value of the in
 
 ## 4.24 SD Index
 
-The SD validity index is based on the concepts of average scattering for clusters and total separation between clusters. 
+The SD validity index is based on the concepts of average scattering for clusters and total separation between clusters.
 
 Mathematically, it is computed as:
 
@@ -608,9 +608,9 @@ The optimal number of clusters is the partition that minimizes the SDbw index.
 
 Introduced by [Rousseeuw in 1987](#Silhouette), the Silhouette Coefficient is composed of two scores:
 
-* **a:** The mean distance between a sample and all other points in the same class
+-   **a:** The mean distance between a sample and all other points in the same class
 
-* **b:** The mean distance between a sample and all other points in the next nearest cluster
+-   **b:** The mean distance between a sample and all other points in the next nearest cluster
 
 Mathematically, this can be written as:
 
@@ -648,7 +648,7 @@ The optimal suggested clustering solution is given by the maximum value of this 
 
 ## 4.28 Trace-Cov-W Index
 
-The Trace(Cov(W)) index involves using the pooled covariance matrix instead of the within-group covariance matrix. 
+The Trace(Cov(W)) index involves using the pooled covariance matrix instead of the within-group covariance matrix.
 
 Mathematically, it can be written as:
 
@@ -670,7 +670,7 @@ The optimal suggested number of clusters is indicated by the maximal difference 
 
 ## 4.29 Trace-W Index
 
-The Trace(W) index is a simple, difference-like criterion and is one of the most popular choices when selecting the appropriate number of clusters. 
+The Trace(W) index is a simple, difference-like criterion and is one of the most popular choices when selecting the appropriate number of clusters.
 
 Mathematically, it can be calculated as:
 
@@ -694,7 +694,7 @@ $$R(M_i) = \displaystyle \frac {||M_i - G^{k}||}{\displaystyle \min_{k \ne k'} |
 
 and,
 
-$$n_k = |x_{k}| \tag{74}$$ 
+$$n_k = |x_{k}| \tag{74}$$
 
 is the cardinality / number of points in a particular cluster
 
@@ -704,7 +704,7 @@ $$\displaystyle \sum_{k=1}^{K} n_k = N \tag{75}$$
 
 ## 4.31 <a name="xbindex"></a>Xie-Beni Index
 
-The Xie-Beni index is an index primarily applied to fuzzy clustering solutions. It is defined as the quotient between the mean quadratic error and the minimum of the minimal squared distances between the points in the clusters. 
+The Xie-Beni index is an index primarily applied to fuzzy clustering solutions. It is defined as the quotient between the mean quadratic error and the minimum of the minimal squared distances between the points in the clusters.
 
 Mathematically, the index can be calculated as:
 
@@ -717,8 +717,3 @@ $$D(C_k, C_{k'}) = min(d(M_i, M_j)) \tag{77}$$
 and $d(M_i, M_j)$ is the distance between the cluster centroids.
 
 The optimal suggested number of clusters corresponds to the minimum value of the index.
-
-
-
-
-
