--- a/resumes.qmd
+++ b/resumes.qmd
@@ -8,7 +8,7 @@ subtitle: "Sorted by creation date"
 ### Current Resume:
 
 ```{=html}
-<iframe src="https://drive.google.com/file/d/1lbKSYqvvFqAhIJia5KFoLK1dQ5gs57GC/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vQG1UDdiwOys7qR5843Sx2fSxACaCjZUEow9TjKT5IyQFvkT37joQEk8eJmfr746w/pub?embedded=true"></iframe>
 ```
 
 ### Oldest Resume on File:
